--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-0": "eslint --ext .js src/",
+    "lint": "eslint \"src/**/*.{js,vue}\"",
+    "lint-fix": "eslint --fix \"src/**/*.{js,vue}\""
   },
   "eslintConfig": {
     "extends": [
