--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint \"src/**/*.{js,vue}\"",
     "lint-fix": "eslint --fix \"src/**/*.{js,vue}\"",
     "install-git-hook": "ln -s ./src/build/git-hooks/pre-commit .git/hooks/pre-commit",
-    "install-git-hook-by-cat": "cat ./src/build/git-hooks/pre-commit > .git/hooks/pre-commit"
+    "install-git-hook-pre-commit-by-cat": "cat ./src/build/git-hooks/pre-commit > .git/hooks/pre-commit",
+    "install-git-hook-commit-msg-by-cat": "cat ./src/build/git-hooks/commit-msg > .git/hooks/commit-msg"
   },
   "eslintConfig": {
     "extends": [
