feat: 添加lint-staged

--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
       "last 1 safari version"
     ]
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": "eslint"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -43,6 +46,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "lint-staged": "^13.1.0"
   }
 }
