style: 使用eslint检查代码格式，修复代码格式问题

--- a/yeah-my-kanban/package.json
+++ b/yeah-my-kanban/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "vite dev --open",
     "build": "vite build",
-    "lint": "eslint './src/**/*.{js, jsx}'"
+    "lint": "eslint \"src/**/*.{js,jsx}\""
   },
   "keywords": [],
   "author": "",
