--- a/yeah-my-kanban/package.json
+++ b/yeah-my-kanban/package.json
@@ -8,7 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "vite dev --open",
     "build": "vite build",
-    "lint": "eslint \"src/**/*.{js,jsx}\""
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "prepare": "husky install",
+    "lint-staged": "echo 'Pre-commit!'"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
     "vite": "^4.0.4"
   },
   "dependencies": {
