ci: 添加github pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aniviah.github.io/study-react/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -15,7 +16,9 @@
     "install-git-hook-commit-msg-by-cat": "cat ./src/build/git-hooks/commit-msg > .git/hooks/commit-msg",
     "pre-commit": "lint-staged",
     "husky-prepare": "husky install",
-    "lint": "lint-staged"
+    "lint": "lint-staged",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.0"
